--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,477 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,100&family=Sacramento&display=swap');
+
+:root {
+  --red: hsl(0, 78%, 62%);
+  --cyan: hsl(180, 62%, 55%);
+  --orange: hsl(34, 97%, 64%);
+  --blue: hsl(212, 86%, 64%);
+  --varyDarkBlue: hsl(234, 12%, 34%);
+  --grayishBlue: hsl(229, 6%, 66%);
+  --veryLightGray: hsl(0, 0%, 98%);
+  --weight1: 200;
+  --weight2: 400;
+  --weight3: 600;
+}
+
+#header_brand {
+  background: #000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#my_name {
+  font-size: 2.5rem;
+  font-family: 'Sacramento', cursive;
+  color: #f1c40f;
+  padding-top: 10px;
+}
+
+/* brands start here */
+#beer_brand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#beer_brand img {
+  height: 100px;
+}
+
+#beer_brand img:hover {
+  transform: translateY(-10px);
+  transition: ease-in-out;
+}
+
+/* brands ends here */
+
+/* card */
+#my_contribution {
+  padding: 0;
+  margin: 20px 0 20px 0;
+  color: black;
+  font-family: 'Sacramento', cursive;
+
+  font-size: 3rem;
+}
+
+/* .container {
+  width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 15px;
+  margin: 0 auto;
+} */
+
+.card {
+  position: relative;
+  width: 300px;
+  height: 350px;
+  margin: 0 auto;
+  background: #fff;
+  box-shadow: 0 15px 60px rgba(0, 0, 0, .5);
+  border-radius: 15px;
+}
+
+.card .face {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card .face.face1 {
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.card .face.face1 h2 {
+  margin: 0;
+  padding: 0;
+}
+
+.card .face.face1 .content {
+  font-size: 1rem;
+  margin: 0;
+  padding: 0 0 1em 0;
+  font-weight: 500;
+}
+
+.card .face.face2 {
+  background: #111;
+  transition: 0.5s;
+}
+
+.card:nth-child(1) .face.face2 {
+  background: linear-gradient(90deg, rgb(227, 175, 50) 0%, rgb(244, 224, 15) 100%);
+  border-radius: 15px;
+}
+
+.card:nth-child(2) .face.face2 {
+  background: linear-gradient(45deg, #ccff00, #09afff);
+  border-radius: 15px;
+}
+
+.card:nth-child(3) .face.face2 {
+  background: linear-gradient(45deg, #e91e63, #ffeb3b);
+  border-radius: 15px;
+}
+
+.card:hover .face.face2 {
+  height: 60px;
+  border-radius: 0 0 15px 15px;
+}
+
+.card .face.face2:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 15px 0 0 15px;
+}
+
+.card .face.face2 h4 {
+  margin: 0;
+  padding: 0;
+  /* font-size: 10em; */
+  color: #fff;
+  transition: 0.5s;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+  color: black;
+  -webkit-text-fill-color: black;
+  /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+  font-size: 3rem;
+}
+
+.card:hover .face.face2 h2 {
+  font-size: 1rem;
+}
+
+/* end of card */
+
+/* my learnings */
+
+
+.my_heading {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 100;
+}
+
+.my_heading span {
+  color: #f1c40f;
+  font-size: 3rem;
+  font-weight: bold;
+  font-family: 'Sacramento', cursive;
+}
+
+.learnings_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* #tools {
+  justify-content: space-evenly !important;
+} */
+.inner_learnings {
+  /* border: 2px solid black; */
+  width: 600px;
+  justify-content: space-between;
+}
+
+#time_management_ul {
+  margin-right: 10px;
+}
+
+.learnings_content ul {
+  list-style: none;
+}
+
+.learnings_content ul li {
+  font-size: 20px;
+}
+
+/* improvement */
+
+/* #improvement_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+} */
+.improvement_card {
+  max-height: 150px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.improvement_card h5 {
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #f1c40f;
+}
+
+
+
+.improvement_card p {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.improvement_card:hover {
+  background: #000;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#beer_img {
+  height: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* consider me */
+#considerMe_box {
+  background-color: #C18000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%23cb8d02' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23d59b05' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23dfa808' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%23e9b60b' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%23F1C40F' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%23f1c40f' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%23f1c40f' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%23f1c40f' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23f1c40f' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%23F1C40F' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+  /* height: 100vh; */
+  flex-direction: column;
+}
+
+#beer_img img {
+  display: block;
+  margin: 0 auto;
+  height: 100%;
+}
+
+/* consider section */
+
+
+.box {
+  border-radius: 5px;
+  box-shadow: 0px 30px 40px -20px var(--grayishBlue);
+  padding: 30px;
+  margin: 20px;
+  background: white;
+}
+
+.box:hover {
+  background: #000;
+  color: white !important;
+}
+
+.row1-container .box:hover h2, .row2-container .box:hover h2 {
+  color: #f1c40f;
+
+}
+
+.row1-container img, .row2-container img {
+  float: right;
+  height: 100px;
+  width: 120px;
+}
+
+@media (max-width: 450px) {
+  .box {
+    height: 200px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (max-width: 950px) and (min-width: 450px) {
+  .box {
+    text-align: center;
+    height: 180px;
   }
+}
+
+.cyan, .red, .blue, .orange {
+  border-top: 3px solid var(--cyan);
+}
+
+
+@media (min-width: 950px) {
+  .row1-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .row2-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .box-down {
+    position: relative;
+    top: 150px;
+  }
+
+  .box {
+    width: 25%;
+
+  }
+
+
+}
+
+/* archives */
+.archive_img .col-md-6 {
+  height: 300px;
+}
+
+.archive_img img {
+  height: 100%;
+  width: 100%;
+}
+
+/* footer */
+#footer {
+  background: #000;
+  padding: 10px;
+}
+
+#footer p {
+  text-align: end;
+  font-size: 1.2rem;
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+}
+
+#footer span {
+  font-family: 'Sacramento', cursive;
+  font-size: 2rem;
+  color: #f1c40f;
+  font-style: italic;
+}
+
+/* timeline */
+
+/* Timeline Container */
+.timeline {
+  /* background: var(--primary-color); */
+  /* margin: 20px auto; */
+  /* padding: 20px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Card container */
+.timeline_card {
+  position: relative;
+  max-width: 400px;
+}
+
+/* setting padding based on even or odd */
+.timeline_card:nth-child(odd) {
+  padding: 30px 0 30px 30px;
+}
+
+.timeline_card:nth-child(even) {
+  padding: 30px 30px 30px 0;
+}
+
+/* Global ::before */
+.timeline_card::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  border: solid #f1c40f;
+}
+
+/* Setting the border of top, bottom, left */
+.timeline_card:nth-child(odd)::before {
+  left: 0px;
+  top: -4.5px;
+  bottom: -4.5px;
+  border-width: 5px 0 5px 5px;
+  border-radius: 50px 0 0 50px;
+}
+
+/* Setting the border of top, bottom, right */
+.timeline_card:nth-child(even)::before {
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-width: 5px 5px 5px 0;
+  border-radius: 0 50px 50px 0;
+}
+
+/* Removing the border if it is the first card */
+.timeline_card:first-child::before {
+  border-top: 0;
+  border-top-left-radius: 0;
+}
+
+/* Removing the border if it is the last card  and it's odd */
+.timeline_card:last-child:nth-child(odd)::before {
+  border-bottom: 0;
+  border-bottom-left-radius: 0;
+}
+
+/* Removing the border if it is the last card  and it's even */
+.timeline_card:last-child:nth-child(even)::before {
+  border-bottom: 0;
+  border-bottom-right-radius: 0;
+}
+
+/* Information about the timeline */
+.info {
+  display: flex;
+  flex-direction: column;
+  background: #333;
+  color: gray;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+/* Title of the card */
+.title {
+  /* color: ; */
+  position: relative;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.info .title span {
+  font-family: 'Sacramento', cursive;
+  color: #f1c40f;
+}
+
+/* Timeline dot  */
+.title::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: transparent;
+  border-radius: 999px;
+  border: 3px solid black;
+}
+
+/* text right if the card is even  */
+.timeline_card:nth-child(even)>.info>.title {
+  text-align: right;
+}
+
+/* setting dot to the left if the card is odd */
+.timeline_card:nth-child(odd)>.info>.title::before {
+  left: -45px;
+}
+
+/* setting dot to the right if the card is odd */
+.timeline_card:nth-child(even)>.info>.title::before {
+  right: -45px;
 }
