--- a/src/App.css
+++ b/src/App.css
@@ -145,10 +145,10 @@
   transition: 0.5s;
   text-shadow: 0 2px 5px rgba(0, 0, 0, .2);
   color: black;
-  -webkit-text-fill-color: black;
-  /* Will override color (regardless of order) */
+  /* -webkit-text-fill-color: black;
+  Will override color (regardless of order)
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: white;
+  -webkit-text-stroke-color: white; */
   font-size: 3rem;
 }
 
@@ -389,6 +389,7 @@
   content: "";
   position: absolute;
   width: 50%;
+  z-index: -1;
   border: solid #f1c40f;
 }
 
@@ -475,3 +476,41 @@
 .timeline_card:nth-child(even)>.info>.title::before {
   right: -45px;
 }
+
+/* thankyou */
+#thankyou {
+  /* border: 1px solid black; */
+  height: 500px;
+}
+
+#thankyou img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* scroll bar */
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+
+/* Track */
+/* ::-webkit-scrollbar-track { */
+/* box-shadow: inset 0 0 5px grey; */
+/* border-radius: 10px; */
+/* } */
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f1c40f;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ba980d;
+}
+
+/* new timeline */
