--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,100&family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
 
 :root {
   --red: hsl(0, 78%, 62%);
@@ -24,12 +25,7 @@ body {
   align-items: center;
 }
 
-#my_name {
-  font-size: 2.5rem;
-  font-family: 'Sacramento', cursive;
-  color: #f1c40f;
-  padding-top: 10px;
-}
+
 
 /* brands start here */
 #beer_brand {
@@ -184,9 +180,57 @@ body {
   align-items: center;
 }
 
-/* #tools {
-  justify-content: space-evenly !important;
+.myLearnings_inner {
+  display: flex;
+  justify-content: space-evenly;
+  /* align-items: center; */
+}
+
+.myLearnings_inner p:nth-child(1) {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.myLearnings_inner p:nth-child(2) {
+  text-align: center;
+  margin: 0;
+  margin-top: 2px;
+  padding: 0;
+  /* font-weight: 100; */
+}
+
+.myLearnings_inner:nth-child(1) {
+  font-size: 1.2rem;
+}
+
+.myLearnings_inner p:nth-child(1) {
+  font-size: 1.5rem;
+}
+
+/* .myLearnings_inner p:nth-child(1):hover {
+  color: #f1c40f;
 } */
+
+.learning_card {
+  background: #f1c40f;
+  padding: 12px;
+  border-radius: 5px;
+  /* width: 120px; */
+}
+
+.learning_card2 {
+  background: #f1c40f;
+  padding: 12px;
+  border-radius: 5px;
+  width: 80px;
+}
+
+.learning_card:hover, .learning_card2:hover {
+  background: #000;
+  color: white;
+}
+
 .inner_learnings {
   /* border: 2px solid black; */
   width: 600px;
@@ -243,7 +287,7 @@ body {
 }
 
 /* consider me */
-#considerMe_box {
+.considerMe_box {
   background-color: #C18000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%23cb8d02' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23d59b05' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23dfa808' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%23e9b60b' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%23F1C40F' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%23f1c40f' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%23f1c40f' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%23f1c40f' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23f1c40f' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%23F1C40F' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
@@ -541,4 +585,107 @@ body {
   background-size: cover;
   background-attachment: fixed;
   position: relative;
+}
+
+/* intro */
+
+#intro_box {
+  height: 100vh;
+  background: url('./assets/intro_bg.png');
+  background-size: cover;
+  background-position: 0 0;
+  background-attachment: fixed;
+}
+
+#intro_navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#navbar {
+  display: flex;
+  align-items: center;
+}
+
+#my_name {
+  font-size: 2.5rem;
+  font-family: 'Sacramento', cursive;
+  color: #9d7f09;
+  padding-top: 10px;
+  display: inline-block;
+}
+
+#intro_my_name {
+  font-family: 'Raleway', sans-serif;
+}
+
+
+#intro_navbar img {
+  max-height: 30px;
+}
+
+#navbar .nav_link {
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+  color: black;
+  text-decoration: none;
+}
+
+#navbar .nav_link:hover {
+  color: white;
+  cursor: pointer;
+}
+
+#navbar Link {
+  list-style: none;
+  border: none;
+
+}
+
+#intro_card_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.intro_cards {
+  height: 110px;
+  width: 150px;
+  padding: 10px;
+  border-radius: 5px;
+  background: black;
+  color: white;
+}
+
+/* .intro_cards:hover {
+  background: #f1c40f;
+  color: black;
+} */
+
+#intro_card_box div {
+  margin: 10px;
+}
+
+#intro_card_box div p:nth-child(1) {
+  font-size: 2.5rem;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+#intro_card_box div p:nth-child(2) {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+}
+
+#cheers {
+  text-align: center;
+  text-transform: uppercase;
+  color: #f1c40f;
+  font-size: 2rem;
+  margin-top: 20px;
+  font-weight: 1000;
 }
