--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ body {
   scroll-behavior: smooth;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 #header_brand {
   background: #000;
   display: flex;
